--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "draft-js": "^0.11.7",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
