--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "@draft-js-plugins/editor": "^4.1.3",
     "@draft-js-plugins/static-toolbar": "^4.1.3",
     "@draft-js-plugins/text-alignment": "^1.0.1",
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "draft-js": "^0.11.7",
     "html2canvas": "^1.4.1",
+    "immutability-helper": "^3.1.1",
     "jspdf": "^2.5.1",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
+    "react-easy-crop": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
