--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "homepage": "https://melhemdirani.github.io/Resume-Builder",
   "dependencies": {
-    "@draft-js-plugins/alignment": "^5.0.3",
-    "@draft-js-plugins/buttons": "^4.3.1",
-    "@draft-js-plugins/editor": "^4.1.3",
-    "@draft-js-plugins/static-toolbar": "^4.1.3",
-    "@draft-js-plugins/text-alignment": "^1.0.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.8.5",
+    "@mui/styled-engine": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "draft-js": "^0.11.7",
-    "html2canvas": "^1.4.1",
-    "immutability-helper": "^3.1.1",
+    "@tiptap/core": "^2.0.0-beta.181",
+    "@tiptap/extension-link": "^2.0.0-beta.43",
+    "@tiptap/extension-text-align": "^2.0.0-beta.31",
+    "@tiptap/extension-underline": "^2.0.0-beta.25",
+    "@tiptap/react": "^2.0.0-beta.114",
+    "@tiptap/starter-kit": "^2.0.0-beta.190",
     "jspdf": "^2.5.1",
     "react": "^18.1.0",
-    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -29,6 +30,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
     "styled-components": "^5.3.5",
+    "tiptap-text-direction-extension": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
