--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://melhemdirani.github.io/Resume-Builder",
   "dependencies": {
+    "@asseinfo/react-kanban": "^2.2.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
@@ -18,6 +19,8 @@
     "@tiptap/extension-underline": "^2.0.0-beta.25",
     "@tiptap/react": "^2.0.0-beta.114",
     "@tiptap/starter-kit": "^2.0.0-beta.190",
+    "array-move": "^4.0.0",
+    "immutability-helper": "^3.1.1",
     "jspdf": "^2.5.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -28,6 +31,7 @@
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-sortable-hoc": "^2.0.0",
     "sass": "^1.52.1",
     "styled-components": "^5.3.5",
     "tiptap-text-direction-extension": "^1.0.7",
